--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 <body>
   <header>
     <div class="logo">ЛОГО</div>
-    <nav>
-      <ul>
+    <nav class="navbar">
+      <div class="burger">&#9776;</div>
+      <ul class="nav-links">
         <li><a href="#">О нас</a></li>
         <li><a href="#">Услуги</a></li>
         <li><a href="#">Контакты</a></li>
